# rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/modulos/: estructuras.rs  matematicas.rs  mod.rs  strings.rs
